--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -12,13 +12,21 @@
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.SEND_SMS" />
 
     <application
-         android:name="com.porter.PorterApplication"
+        android:name=".PorterApplication"
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/CustomActionBarTheme" >
+        <meta-data
+            android:name="com.google.android.maps.v2.API_KEY"
+            android:value="AIzaSyDCnQI-JVVzAdqtCFjT6IWtXqzY29USBVc" />
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
+
         <activity
             android:name=".activities.MainActivity"
             android:label="@string/app_name" >
@@ -29,8 +37,12 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.porter.activities.ParcelInfoActivity"
+            android:name=".activities.ParcelInfoActivity"
             android:label="@string/title_activity_parcel_info" >
+        </activity>
+        <activity
+            android:name=".MyWorkActivity"
+            android:label="@string/title_activity_my_work" >
         </activity>
     </application>
 
