--- a/project.properties
+++ b/project.properties
@@ -12,4 +12,5 @@
 
 # Project target.
 target=android-23
-android.library.reference.1=../../../Android/adt-bundle-windows-x86-20130219/sdk/extras/android/support/v7/appcompat
+android.library.reference.1=..\\..\\..\\Android\\adt-bundle-windows-x86-20130219\\sdk\\extras\\android\\support\\v7\\appcompat
+android.library.reference.2=../../../Android/adt-bundle-windows-x86-20130219/sdk/extras/google/google_play_services/libproject/google-play-services_lib
